--- a/scss/_tickets.scss
+++ b/scss/_tickets.scss
@@ -1,42 +1,44 @@
-ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    /*background-color: white;*/
-    width: 100%;
-    /*display: flex;*/
-    align-items: stretch;
-}
+#tickets {
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        /*background-color: white;*/
+        width: 100%;
+        /*display: flex;*/
+        align-items: stretch;
+    }
 
-#buttons{
-    display: flex!important;
-}
+    #buttons {
+        display: flex !important;
+    }
 
-#buttons li {
-    float: left;
-    flex: 1 1 auto;
-}
+    #buttons li {
+        float: left;
+        flex: 1 1 auto;
+    }
 
-#R, #T, #W, #V {
-    padding: 20px;
-    text-align: center;
-    text-decoration: none;
-    display: table-cell;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-}
+    #R, #T, #W, #V {
+        padding: 20px;
+        text-align: center;
+        text-decoration: none;
+        display: table-cell;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        -webkit-text-size-adjust: 100%;
+        -ms-text-size-adjust: 100%;
+    }
 
-#buttons li button.selected{
-    background-color: darkorange;
-    color: white;
-}
+    #buttons li button.selected {
+        background-color: darkorange;
+        color: white;
+    }
 
-h1{
-    font-family: "Iowan Old Style"!important;
-    color: orangered!important;
-    text-align: center;
+    h1 {
+        font-family: "Iowan Old Style" !important;
+        color: orangered !important;
+        text-align: center;
+    }
 }
