--- a/scss/_shopping.scss
+++ b/scss/_shopping.scss
@@ -16,7 +16,7 @@
     font-weight: 300;
   }
 
-  h1, h4 {
+  h1, h4{
     color: #211300;
     margin:auto;
   }
@@ -86,6 +86,7 @@
     text-align: left;
     border: 1px solid #ededed;
     padding: 4px;
+    background-color: #fff;
   }
 
   .footer3{
@@ -97,6 +98,7 @@
     text-align: left;
     border: 1px solid #ededed;
     padding: 3px;
+    background-color: #fff;
   }
 
   .todo-footer span{
@@ -156,6 +158,6 @@
   }
 
   .item:hover {
-    background-color: rgba(255, 174, 174, 0.34);
+    background-color: rgba(255, 125, 65, 0.24);
   }
 }
