--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -1,14 +1,35 @@
 $fetchOrange: #f36100;
+#User{
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  z-index: 2000;
+  top: 0
+}
+#Fetch{
+  font-size: 190%;
+  margin-top:-20px;
+  Font-family: Fetch;
+  color: #f36100;
+  margin-bottom:0;
+  h1{
+    margin-bottom:-5px;
+  }
+  button{
 
-//
-//body{
-//  font-family: sans-serif;
-//  padding-top: 100px;
-//  //overflow: hidden;
-//  line-height: 0.4em;
-//  background-color: #ffffff;
-//  max-width: 100%;
-//
+      padding: 0;
+      border: 0;
+      background: none;
+      font-size: 100%;
+  }
+}
+
+body {
+  background-color: #ffffff;
+}
+#page-content{
+  margin: 15%;
+}
 //}
 //
 //#header{
@@ -20,19 +41,13 @@ $fetchOrange: #f36100;
 //  color: #f36100;
 //}
 //
-//.glyphicon {
-//  position: relative;
-//  top: 1px;
-//  display: inline-block;
-//  font-style: normal;
-//  font-weight: 400;
-//  line-height: 1;
-//  color: grey;
-//
-//  :hover{
-//    color: $fetchOrange;
-//  }
-//}
+.glyphicon {
+
+  color: grey;
+}
+.glyphicon:hover{
+  color: orange;
+}
 //
 //
 //
