--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -1,14 +1,19 @@
 $fetchOrange: #f36100;
 #User{
+  background-color: white;
   position: fixed;
   width: 100%;
-  height: 50px;
+  height: 100px;
   z-index: 2000;
+  border-bottom: solid  lightgrey 1px;
   top: 0
+}
+#Glyph{
+  margin-top:20px;
 }
 #Fetch{
   font-size: 190%;
-  margin-top:-20px;
+  margin-top:0px;
   Font-family: Fetch;
   color: #f36100;
   margin-bottom:0;
@@ -28,17 +33,17 @@ body {
   background-color: #ffffff;
 }
 #page-content{
-  margin: 15%;
+
 }
 @media screen and(min-width: 200px){
   #Fetch{
-    margin-top: -10px;
+    //margin-top: -10px;
     font-size: 130%;
   }
 }
 @media screen and(min-width: 1000px){
   #Fetch{
-    margin-top: -20px;
+    //margin-top: -20px;
     font-size: 190%;
   }
 }
