--- a/scss/_homePage.scss
+++ b/scss/_homePage.scss
@@ -2,8 +2,8 @@
 #homePage {
 
   margin: 15%;
-
-
+  min-width:250px;
+  margin-top:-100px;
 
   button{
     background-color: #ffffff;
@@ -37,7 +37,7 @@
     font-size: 3em;
     left: 0;
     width: 100%;
-    top: 42%;
+    top: 48%;
   }
 
   figure img {
