--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,9 @@ ex.
 body {
   background-color: #ffffff; }
 
+#page-content {
+  margin-top: 150px; }
+
 @media screen and (min-width: 200px) {
   #Fetch {
     font-size: 130%; } }
@@ -594,7 +597,7 @@ h2 {
 #homePage {
   margin: 15%;
   min-width: 250px;
-  margin-top: -100px;
+  margin-top: -50px;
   /* this ensure the container is never
      larger than 90% of the screen */
   /* needed to overwrite bootstraps margins*/ }
