--- a/scss/_template.scss
+++ b/scss/_template.scss
@@ -1,9 +1,15 @@
 $fetchOrange: #f36100;
+.cd-panel-container{
+  background-color: #2E3233;
+}
+.cd-panel-header{
+  background-color: darkorange;
+}
 #User{
   background-color: white;
   position: fixed;
   width: 100%;
-  height: 85px;
+  height: 95px;
   z-index: 2000;
   border-bottom: solid  lightgrey 1px;
   top: 0
@@ -11,13 +17,15 @@ $fetchOrange: #f36100;
 #Glyph{
   margin-top:20px;
 }
+
 #Fetch{
   font-size: 190%;
   margin-top:0px;
   Font-family: Fetch;
   color: #f36100;
   margin-bottom:0;
-  h1{
+  #title{
+    margin-top:3%;
     margin-bottom:-5px;
   }
   button{
@@ -26,6 +34,32 @@ $fetchOrange: #f36100;
       border: 0;
       background: none;
       font-size: 100%;
+  }
+}
+#Butt{
+  margin-top:5%;
+  div{
+    cursor: pointer;
+    width:100%;
+    height: 40px;
+    border:0;
+    padding: 0;
+    border:none;
+    color:darkgray;
+    background-color:transparent;
+    text-align: left;
+    margin-left:1%;
+    .glyphicon{
+      margin-right:1%;
+    }
+  }
+
+  div:hover{
+
+    color:white;
+    .glyphicon{
+      color:orange;
+    }
   }
 }
 
@@ -48,7 +82,7 @@ body {
 @media screen and(min-width: 1000px){
   #Fetch{
     //margin-top: -20px;
-    font-size: 190%;
+    font-size: 150%;
   }
   #page-content{
     margin-top:8%;
