--- a/css/style.css
+++ b/css/style.css
@@ -515,12 +515,6 @@ ul {
   -moz-transition: top 0.3s 0.3s;
   transition: top 0.3s 0.3s; }
 
-@media only screen and (min-width: 768px) {
-  .cd-panel-header {
-    width: 75%; } }
-@media only screen and (min-width: 1170px) {
-  .cd-panel-header {
-    width: 50%; } }
 .cd-panel-close {
   position: absolute;
   top: 0;
@@ -602,28 +596,53 @@ ul {
   -moz-transition-delay: 0s;
   transition-delay: 0s; }
 
-@media only screen and (min-width: 400px) {
+@media only screen and (min-width: 200px) {
   .cd-panel-container {
-    width: 90%; } }
+    width: 90%; }
+
+  .cd-panel-content {
+    margin-top: 10%; } }
+@media only screen and (min-width: 600px) {
+  .cd-panel-container {
+    width: 60%; }
+
+  .cd-panel-header {
+    width: 60%; }
+
+  .cd-panel-content {
+    margin-top: 5%; } }
 @media only screen and (min-width: 1170px) {
   .cd-panel-container {
-    width: 50%; } }
+    width: 25%; }
+
+  .cd-panel-content {
+    margin-top: 15%; }
+
+  .cd-panel-header {
+    width: 25%; } }
 .cd-panel-content {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  padding: 0px;
-  overflow: auto;
+  overflow: hidden;
   /* smooth scrolling on touch devices */
   -webkit-overflow-scrolling: touch; }
+
+.cd-panel-container {
+  background-color: #2E3233; }
+
+.cd-main-content {
+  overflow: hidden; }
+
+.cd-panel-header {
+  background-color: darkorange; }
 
 #User {
   background-color: white;
   position: fixed;
   width: 100%;
-  height: 85px;
+  height: 95px;
   z-index: 2000;
   border-bottom: solid  lightgrey 1px;
   top: 0; }
@@ -631,19 +650,45 @@ ul {
 #Glyph {
   margin-top: 20px; }
 
+button:focus {
+  outline: 0; }
+
 #Fetch {
   font-size: 190%;
   margin-top: 0px;
   Font-family: Fetch;
   color: #f36100;
   margin-bottom: 0; }
-  #Fetch h1 {
+  #Fetch div {
+    font-size: 190%; }
+  #Fetch #title {
+    margin-top: 3%;
     margin-bottom: -5px; }
   #Fetch button {
     padding: 0;
     border: 0;
     background: none;
     font-size: 100%; }
+
+#Butt {
+  margin-top: 8%; }
+  #Butt div {
+    cursor: pointer;
+    width: 100%;
+    height: 40px;
+    border: 0;
+    padding: 0;
+    border: none;
+    color: darkgray;
+    background-color: transparent;
+    text-align: left;
+    margin-left: 1%; }
+    #Butt div .glyphicon {
+      margin-right: 1%; }
+  #Butt div:hover {
+    color: white; }
+    #Butt div:hover .glyphicon {
+      color: orange; }
 
 body {
   background-color: #ffffff; }
@@ -659,7 +704,7 @@ body {
     margin-top: 20%; } }
 @media screen and (min-width: 1000px) {
   #Fetch {
-    font-size: 190%; }
+    font-size: 150%; }
 
   #page-content {
     margin-top: 8%; } }
