--- a/scss/_passwordReset.scss
+++ b/scss/_passwordReset.scss
@@ -3,11 +3,16 @@
   .form-group {
     border: none;
     margin-top: 10px;
-    margin-bottom:10px;
+    margin-bottom:30px;
     height:30px;
   }
 
-  #submit{
-    margin-top:40px;
+  fieldset{
+    margin-bottom:10px;
+  }
+
+
+  #submitPass{
+    margin-top:15px;
   }
 }
