--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -3,6 +3,7 @@ $fetchOrange: #f36100;
 
 body {
   background-color: #ffffff;
+  //min-width:460px;
 }
 
 img {
@@ -33,22 +34,20 @@ button{
 
 h2, h3, h4{
   color: $fetchOrange;
+  opacity: .8;
   margin:auto;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h2 {
+  font-size:40px;
   margin-top: 3%;
-  color: #f36100;
-  opacity: .8;
-  font: 50px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 100;
   text-align: center;
 }
 h3 {
-  //margin-top: 3%;
-  color: #f36100;
-  opacity: .8;
-  font: 30px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  margin-top: 3%;
+  font-size:30px;
   font-weight: 100;
   text-align: center;
 }
@@ -58,7 +57,7 @@ h3 {
   padding:0;
   margin: auto;
   text-align: center;
-  width: 100%;
+  width: 80%;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
   0 25px 50px 0 rgba(0, 0, 0, 0.1);
 
@@ -96,6 +95,7 @@ h3 {
     text-decoration: line-through;
     opacity: .5;
   }
+
 
   #numItems {
     float: left;
