--- a/scss/_passwordReset.scss
+++ b/scss/_passwordReset.scss
@@ -1,8 +1,9 @@
 #passwordReset{
 
+
   .form-group {
     border: none;
-    margin-top: 10px;
+    margin-top: 0;
     margin-bottom:30px;
     height:30px;
   }
