--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -21,6 +21,13 @@ li {
 
 }
 
+.btn-primary{
+  background: $fetchOrange;
+  border:none;
+
+}
+
+
 button{
   padding: 0;
   border: 0;
@@ -36,6 +43,7 @@ h2, h3, h4{
   color: $fetchOrange;
   opacity: .8;
   margin:auto;
+  margin-bottom:3%;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
